--- a/vitrineapp/templates/base.html
+++ b/vitrineapp/templates/base.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header class="ui menu color-menu">
-    <a class="active item menu-a-color" href="#">
+    <a class="active item menu-a-color" href="{% url 'vitrine:index' %}">
         <span>
             <i class="ui home icon"></i>
         </span>
