--- a/vitrineapp/templates/index.html
+++ b/vitrineapp/templates/index.html
@@ -23,9 +23,17 @@
                         </div>
                         <button type='submit' class="ui submit green button fluid color-button" value='Entrar'>Entrar</button>
                     </form>
-
             </div>
-
+        <div class="ui basic segment">
+            <div class="ui white fluid label">
+                <h4 class="color-h-green centered">
+                    <a class="color-a-brown" href="{% url 'vitrine:cadastro_usuario' %}">
+                        <i class="plus icon"></i>
+                        Cadastre-se
+                    </a>
+                </h4>
+            </div>
+        </div>
         </div>
 
         <div class="five wide column"></div>
