Login, logout, listamento e cadastro de produtos

--- a/vitrineapp/templates/base.html
+++ b/vitrineapp/templates/base.html
@@ -12,6 +12,11 @@
             <i class="ui home icon"></i>
         </span>
     </a>
+    <a class="active item menu-a-color right" href="{% url 'vitrine:logout' %}">
+        <span>
+            <i class="sign out alternate ui icon"></i>
+        </span>
+    </a>
 </header>
 <article class="ui stackable grid">
     {% block content %}
