Arrumado URL para path e novos inputs para o produto

--- a/vitrineapp/templates/cadastro_produtos.html
+++ b/vitrineapp/templates/cadastro_produtos.html
@@ -11,6 +11,14 @@
             {{ form.nome_produto }}
         </div>
         <div class="field">
+            <label class="color-label-brown">Preço</label>
+            {{ form.preco_produto }}
+        </div>
+        <div class="field">
+            <label class="color-label-brown">Descrição</label>
+            {{ form.descricao_produto }}
+        </div>
+        <div class="field">
             <label class="color-label-brown">Categoria</label>
             {{ form.id_categoria }}
         </div>
