--- a/vitrineapp/templates/lista_produtos.html
+++ b/vitrineapp/templates/lista_produtos.html
@@ -22,6 +22,13 @@
     {% if lista_produtos %}
     <div class="ui padded segment">
         <h2 class="ui header">Produtos</h2>
+    <div class="ui search">
+        <div class="ui icon input">
+            <input class="prompt" type="text" placeholder="Buscar...">
+                <i class="search icon"></i>
+        </div>
+    <div class="results"></div>
+    </div>
         <div class="ui large relaxed list">
             {% for produto in lista_produtos %}
             <div class="item">
@@ -30,6 +37,7 @@
                     {{ produto.nome_produto }}
                     {{ produto.preco_produto }}
                     {{ produto.descricao_produto }}
+                    {{ produto.desc_categoria }}
                 </div>
             </div>
             {% endfor %}
