--- a/vitrineapp/templates/lista_produtos.html
+++ b/vitrineapp/templates/lista_produtos.html
@@ -22,14 +22,17 @@
     {% if lista_produtos %}
     <div class="ui padded segment">
         <h2 class="ui header">Produtos</h2>
+    <form method="get" action="{% url 'vitrine:lista_produtos' %}">
     <div class="ui search">
         <div class="ui icon input">
-            <input class="prompt" type="text" placeholder="Buscar...">
-                <i class="search icon"></i>
+            <input class="prompt" name="q" type="text" placeholder="Buscar..." value= "{{request.GET.q}}">
+                <input type="submit" value="search"><i class="search icon"></i>
         </div>
     <div class="results"></div>
     </div>
+    </form>
         <div class="ui large relaxed list">
+
             {% for produto in lista_produtos %}
             <div class="item">
                 <i class="box icon"></i>
@@ -37,10 +40,11 @@
                     {{ produto.nome_produto }}
                     {{ produto.preco_produto }}
                     {{ produto.descricao_produto }}
-                    {{ produto.desc_categoria }}
+                    {{ produto.id_categoria }}
                 </div>
             </div>
             {% endfor %}
+
         </div>
     </div>
     {% else %}
