--- a/vitrineapp/templates/lista_produtos.html
+++ b/vitrineapp/templates/lista_produtos.html
@@ -20,7 +20,7 @@
 
 <div class="ten wide column">
     {% if lista_produtos %}
-    <div class="ui padded segment">
+
         <h2 class="ui header">Produtos</h2>
     <form method="get" action="{% url 'vitrine:lista_produtos' %}">
     <div class="ui search">
@@ -31,21 +31,29 @@
     <div class="results"></div>
     </div>
     </form>
-        <div class="ui large relaxed list">
+        <table class="ui celled definition table">
+            <thead>
+                <tr><th class="collapsing"></th>
+                <th>Nome</th>
+                <th>Preço</th>
+                <th>Descrição</th>
+                <th>Categoria</th>
+            </tr></thead>
+            <tbody>
             {% for produto in lista_produtos %}
-            <div class="item">
-                <i class="box icon"></i>
-                <div class="content">
-                    {{ produto.nome_produto }}
-                    {{ produto.preco_produto }}
-                    {{ produto.descricao_produto }}
-                    {{ produto.id_categoria }}
-                </div>
-            </div>
-            {% endfor %}
+                <tr>
+                <td><i class="box icon"></i></td>
 
-        </div>
-    </div>
+                    <td>{{ produto.nome_produto }}</td>
+                    <td>{{ produto.preco_produto }}</td>
+                    <td>{{ produto.descricao_produto }}</td>
+                    <td>{{ produto.id_categoria }}</td>
+               </tr>
+
+            {% endfor %}
+            </tbody>
+        </table>
+
     {% else %}
     <div class="ui placeholder segment">
         <div class="ui centered header">
