Detalhes do Produto

--- a/vitrineapp/templates/cadastro_produtos.html
+++ b/vitrineapp/templates/cadastro_produtos.html
@@ -24,11 +24,11 @@
         </div>
         <div class="ui grid">
             <a class="ui green button color-button left floated"
-           href="{% url 'vitrine:cadastro_cate' %}">
+           href="{% url 'vitrine:cadastro_cate' %}" id="cate">
             <i class="plus icon"></i>
             Cadastrar categoria
             </a>
-            <div class="thirteen wide column">
+            <div class="thirteen wide column" id="save">
                 <button type="submit" class="ui green button color-button right floated">Salvar</button>
             </div>
         </div>
