--- a/static/style.css
+++ b/static/style.css
@@ -39,3 +39,13 @@ color: #ffffff !important;
 h1.color-h-green{
 margin-top: 5% !important;
 }
+
+#cate{
+ margin-top: 15px;
+ margin-left: 15px;
+}
+
+#save{
+ margin-top: -50px;
+ margin-left: 150px;
+}
