--- a/vitrineapp/templates/base.html
+++ b/vitrineapp/templates/base.html
@@ -8,14 +8,10 @@
 <body>
 <header class="ui menu color-menu">
     <a class="active item menu-a-color" href="{% url 'vitrine:index' %}">
-        <span>
-            <i class="ui home icon"></i>
-        </span>
+        <span><i class="ui home icon"></i></span>
     </a>
     <a class="active item menu-a-color right" href="{% url 'vitrine:logout' %}">
-        <span>
-            <i class="sign out alternate ui icon"></i>
-        </span>
+        <span><i class="sign out alternate ui icon"></i></span>
     </a>
 </header>
 <article class="ui stackable grid">
@@ -38,8 +34,7 @@
     </div>
     <div class="one wide column">
         <a href='http://fabricadesoftware.ifc.edu.br'>
-            <img class="ui image centered tiny" src="{% static "image/logo-fabrica.png" %}"
-                 alt="Logo Fábrica de Software">
+            <img class="ui image centered tiny" src="{% static "image/logo-fabrica.png" %}" alt="Logo Fábrica de Software">
         </a>
     </div>
 </footer>
