--- a/vitrineapp/templates/detalhe_produto.html
+++ b/vitrineapp/templates/detalhe_produto.html
@@ -1,22 +1,41 @@
 {% extends 'base.html' %}
+
 {% block content %}
-
 <div class="one wide column"></div>
-
-    <div class="ten wide column">
+<div class="ten wide column">
     <div class="ui padded segment">
-        <h2 class="ui header">{{ produto.nome_produto }}</h2>
-        <div class="ui large relaxed list">
+        <h2 class="ui header color-h-green"><i class="box icon" id="icon"></i>Detalhes do produto</h2>
+        <div class="ui relaxed divided list">
             <div class="item">
-                <i class="box icon"></i>
                 <div class="content">
-                    {{ produto.descricao_produto }}
-                    {{ produto.preco_produto }}
-                    {{ produto.id_categoria}}
+                    <div class="ui raised segment">Nome: {{ produto.nome_produto }}</div>
+                    <div class="ui raised segment">Preço: {{ produto.preco_produto }}</div>
+                <div class="ui raised segment">Descrição: {{ produto.descricao_produto }}</div>
                 </div>
             </div>
+            <h3 class="ui header">Comentários</h3>
+                <div class="ui comments">
+                    <div class="comment">
+                        <div class="content">
+                            {% for comentario in produto.comentarios.all %}
+                                <div class="ui secondary segment">
+                                    <div class="text">{{ comentario.texto|linebreaks }}</div>
+                                </div>
+                            {% empty %}
+                                <p>Sem comentários ainda!</p>
+                            {% endfor %}
+
+                            <form class="ui reply form" method="post">{% csrf_token %}
+                                <div class="field">
+                                    <textarea name="texto"></textarea>
+                                </div>
+                                <button type="submit" class="ui submit green labeled icon button color-button">
+                                    <i class="icon edit"></i> Adicionar comentário
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
         </div>
     </div>
-    </div>
-
 {% endblock %}
