--- a/vitrineapp/templates/base.html
+++ b/vitrineapp/templates/base.html
@@ -3,6 +3,7 @@
     {% load staticfiles %}
     <link rel="stylesheet" href="{% static 'semantic/semantic.css' %}">
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="shortcut icon" href={% static "image/favicon.ico" %}/>
     <title>Fábrica</title>
 </head>
 <body>
